hphp/test/zend/good/ext/mcrypt/tests/mcrypt_encrypt_variation1.php.expectf
*** Testing mcrypt_encrypt() : usage variation ***

--empty string DQ--
Error: 2 - mcrypt_encrypt(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_encrypt_variation1.php(56)
bool(false)

--empty string SQ--
Error: 2 - mcrypt_encrypt(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_encrypt_variation1.php(56)
bool(false)
===DONE===
